  examples to this format.
  (Florian Angeletti)

- add a HACKING.adoc file to contain various tips and tricks for
  people hacking on the repository. See also CONTRIBUTING.md for
  advice on sending contributions upstream.
  (Gabriel Scherer and Gabriel Radanne, review by David Allsopp,
  inspired by John Whitington)

### Other libraries:

- MPR#7339, GPR#787: Support the '0 dimension' case for bigarrays
  (see Bigarray documentation)
  (Laurent Mazare,
   review by Gabriel Scherer, Alain Frisch and Hezekiah M. Carty)

* PR#7342, GPR#797: fix Unix.read on pipes with no data left on Windows
  it previously raised an EPIPE error, it now returns 0 like other OSes
  (Jonathan Protzenko)

### Bytecode debugger (ocamldebug):

- GPR#977: Catch Out_of_range in "list" command
  (Yunxing Dai)

### Tools:

- PR#5163: ocamlobjinfo, dump globals defined by bytecode executables
  (Stéphane Glondu)

- PR#7333: ocamldoc, use the first sentence of text file as
  a short description in overviews.
  (Florian Angeletti)

- GPR#848: ocamldoc, escape link targets in HTML output
  (Etienne Millon, review by Gabriel Scherer, Florian Angeletti and
  Daniel Bünzli)

- GPR#986: ocamldoc, use relative paths in error message
  to solve ocamlbuild+doc usability issue (ocaml/ocamlbuild#79)
  (Gabriel Scherer, review by Florian Angeletti, discussion with Daniel Bünzli)

- clarify ocamldoc text parsing error messages
  (Gabriel Scherer)

### Compiler distribution build system:

- GPR#887: allow -with-frame-pointers if clang is used as compiler on Linux
  (Bernhard Schommer)

- GPR#919: use clang as preprocessor assembler if clang is used as compiler
  (Bernhard Schommer)

- GPR#927: improve the detection of hashbang support in the configure script
  (Armaël Guéneau)

- PR#7377: remove -std=gnu99 for newer gcc versions
  (Damien Doligez, report by ygrek)

- GPR#693: fail on unexpected errors or warnings within caml_example
  environment.
  (Florian Angeletti)
